# SPRITE-Stable

./: README.md  pyproject.toml
casa_datatools/: pyproject.toml
casa_datatools/src/casa_datatools/: CASADataModule.py  CASADataset.py  main.py
casa_datatools/src/casa_datatools/downloading_data/: DataDownloader.py  run_DataDownloader.sh
casa_datatools/src/casa_datatools/processing_data/: Preprocessor.py  config.yml  normalization.py  run_Preprocessor.py  run_Preprocessor.sh
dgmr/: .gitignore  main.py  pyproject.toml  requirements.txt
dgmr/sbatch_scripts/: run_casa_ddp.sh  run_casa_ddp_gcl.sh  run_casa_ddp_gcl_lr.sh  run_casa_ddp_gcl_lr_uv.sh  run_casa_ddp_loss.sh  run_casa_ddp_lr.sh  sbatch_plotting_notebook.sh  sbatch_run.sh  sbatch_run_Zhe.sh  sbatch_run_casa.sh  sbatch_run_nimrod.sh
dgmr/src/dgmr/: config.py
dgmr/src/dgmr/models/: common.py  dgmr.py  dgmr_crpsLoss.py  dgmr_es_fl.py  dgmr_es_fl_gradient_checkpoint.py  dgmr_evalscore.py  dgmr_nimrod_metrics.py  discriminators.py  generators.py  loss_factory.py  utils.py  weight_ceiling.py
dgmr/src/dgmr/models/layers/: Attention.py  ConvGRU.py  utils.py
dgmr/src/dgmr/sandbox/: check_netCDF.ipynb  netCDFData_tools.ipynb  use_casa_dgmr.ipynb  use_nimrod_model_real.py  use_trained_model.py
dgmr/src/dgmr/sandbox/derivedProblems/: graphing.ipynb  resize_image_exp.ipynb
dgmr/src/dgmr/sandbox/extract_info/: frame_info_extractor.py  max_values_casa.py  max_values_nimrod.py  run_max_values_casa.sh  run_max_values_nimrod.sh  sort_casa_csv.py
dgmr/src/dgmr/tests/: CASADGMR.py  casa_sample_data.py  testLosses.py  test_losses.py  test_model.py
dgmr/src/dgmr/tools/: NIMRODDataset.py  get-pip.py  plotting_main.ipynb  plotting_main_testing_reworked_gcr.ipynb  plotting_main_testing_reworked_gcr_long_full.ipynb  plotting_main_testing_reworked_lr.ipynb  plotting_unet.ipynb
dgmr/src/dgmr/tools/analyzing_data/: RainfallDistribution.py  RainfallDistribution_clean.py  clean_all.sh  plotting_data_feature.py  ranks.ipynb  sbatch_run.sh  show_difference.py
dgmr/src/dgmr/tools/thesis/: Cropped_NetCDF_Map.html  NetCDF_Map2.html  plot_file.ipynb  plot_file_cropped.ipynb
dgmr/src/dgmr/train/: callbacks.py  checkpoints.py  run.py  run_casa.py  run_casa_dgmr.py  run_nimrod_updated.py
ldcast/: .gitignore  README.md  main.py  pyproject.toml  setup.py
ldcast/sbatch_scripts/: sbatch_run_autoenc.sh  sbatch_run_diffusion.sh
ldcast/src/ldcast/: forecast.py
ldcast/src/ldcast/analysis/: confmatrix.py  crps.py  fss.py  histogram.py  rank.py
ldcast/src/ldcast/config/: train_config_diffusion.yaml
ldcast/src/ldcast/features/: batch.py  casa_data.py  io.py  losses.py  patches.py  sampling.py  split.py  transform.py  utils.py
ldcast/src/ldcast/models/: distributions.py  utils.py
ldcast/src/ldcast/models/autoenc/: autoenc.py  encoder.py  training.py
ldcast/src/ldcast/models/benchmarks/: dgmr.py  pysteps.py  transform.py
ldcast/src/ldcast/models/blocks/: afno.py  attention.py  resnet.py
ldcast/src/ldcast/models/diffusion/: diffusion.py  plms.py  utils.py
ldcast/src/ldcast/models/genforecast/: analysis.py  training.py  unet.py
ldcast/src/ldcast/models/nowcast/: nowcast.py
ldcast/src/ldcast/scripts/: data_stats.py  dwd_dataset.py  eval_data.py  eval_dgmr.py  eval_genforecast.py  eval_persistence.py  eval_pysteps.py  forecast_demo.py  metrics.py  plots_genforecast.py  train_autoenc.py  train_genforecast.py  train_nowcaster.py
ldcast/src/ldcast/visualization/: cm.py  plots.py
model_compare/: README.md  main.py  pyproject.toml  sbatch_run_uv.sh
model_compare/src/model_compare/: clean_all.sh  model_selecting.py  run_experiment.py  run_experiment.yaml  sbatch_run.sh
model_compare/src/model_compare/data_readers/datasets/: NetCDFDataset.py  PNGDataset.py
model_compare/src/model_compare/data_readers/pysteps_customized_importers/: NetCDFImporter.py  PNGDataImporter.py
model_compare/src/model_compare/entities/config/: model_compare_experiment.py
model_compare/src/model_compare/entities/constants/: Constants.py
model_compare/src/model_compare/entities/forecast/: forecast_result_monitor.py
model_compare/src/model_compare/experiments/: model_comparer.py  nowcasting_experiment.py
model_compare/src/model_compare/experiments/evaluating_methods/: MetricsEvaluator.py
model_compare/src/model_compare/experiments/presenting_results/: ForecastPlotter.py  MetricsPlotter.py
model_compare/src/model_compare/uml_diagrams/: experiments_class_diagram.puml  timesquence.puml
model_compare/src/model_compare/utils/decorators/: Timing_decorator.py
model_compare/src/model_compare/utils/file_operators/: SymbolicLinkCreator.py
model_compare/src/model_compare/utils/methods_scanner/: AbstractClassScanner.py
nowcastnet/: .gitignore  main.py  pyproject.toml  sbatch_nowcastnet.sh
nowcastnet/src/nowcastnet/: evaluator.py  evaluator_casa.py  mrms_case_test.sh  mrms_large_case_test.sh  requirements.txt  run.py  trainer.py
nowcastnet/src/nowcastnet/data_provider/: datasets_factory.py  loader.py
nowcastnet/src/nowcastnet/layers/: losses.py  utils.py
nowcastnet/src/nowcastnet/layers/entities/: net_config.py
nowcastnet/src/nowcastnet/models/: model_factory.py  nowcastnet.py  nowcastnet_pytorch_lightning.py
smaat_unet/: .gitignore  README.md  main.py  pyproject.toml  sbatch_run_train_unet.sh
smaat_unet/src/smaat_unet/: calc_metrics_test_set.py  create_datasets.py  plot_examples.ipynb
smaat_unet/src/smaat_unet/metric/: confusionmatrix.py  iou.py  precipitation_metrics.py
smaat_unet/src/smaat_unet/models/: SmaAt_UNet.py  regression_lightning.py  unet_casa_regression_lightning.py  unet_parts.py  unet_parts_depthwise_separable.py  unet_precip_regression_lightning.py
smaat_unet/src/smaat_unet/train/: train_SmaAtUNet.py  train_precip_lightning.py  train_unet_casa_lightning.py
smaat_unet/src/smaat_unet/utils/: data_loader_precip.py  formatting.py  model_classes.py
sprite_core/: pyproject.toml
sprite_core/src/sprite_core/: .env.example  config.py
sprite_metrics/: pyproject.toml
sprite_metrics/src/sprite_metrics/: losses.py
(+42 files in other folders)
