[project]
name = "smaat-unet"
version = "0.1.0"
description = "Code for the paper `SmaAt-UNet: Precipitation Nowcasting using a Small Attention-UNet Architecture`"
authors = [{ name = "Kevin Trebing", email = "Kevin.Trebing@gmx.net" }]
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "h5py>=3.13.0",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "casa_datatools",
    "ruff",
    "pre-commit"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
scripts = [
    "ipykernel>=6.29.5",
]

[tool.uv]
no-cache = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
casa_datatools = { workspace = true }

[tool.uv.workspace]
members = ["../casa_datatools"]

[tool.setuptools]
packages = ["smaat_unet"]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true